--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "lint": "next lint",
     "seed": "tsx scripts/seed.ts",
     "cleanup-users": "tsx scripts/cleanup-users.ts",
-    "import-players": "tsx scripts/import-players-csv.ts"
+    "import-players": "tsx scripts/import-players-csv.ts",
+    "import-players-json": "tsx scripts/import-players-json.ts"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
