Clean up database and improve cleanup script
- Updated cleanup script to delete users, predictions, matches, and players
- Removed old documentation files and JSON player data
- Added new CSV-based player management system
- Added test scripts for scoring validation and recalculation
- Improved code organization and removed unused files

--- a/package.json
+++ b/package.json
@@ -8,9 +8,12 @@
     "start": "next start",
     "lint": "next lint",
     "seed": "tsx scripts/seed.ts",
+    "seed-test": "tsx scripts/seed-test-data.ts",
+    "calculate-test-player-2": "tsx scripts/calculate-test-player-2.ts",
+    "recalculate-match": "tsx scripts/recalculate-match.ts",
+    "test-scoring": "tsx scripts/test-scoring.ts",
     "cleanup-users": "tsx scripts/cleanup-users.ts",
-    "import-players": "tsx scripts/import-players-csv.ts",
-    "import-players-json": "tsx scripts/import-players-json.ts"
+    "import-players": "tsx scripts/import-players-csv.ts"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
