Fix edit cutoff logic and add Match 1 prediction insertion scripts
- Fix edit cutoff to prevent editing Match 2/3 when Match 1 is completed
- Update getFirstMatchOfDay to include completed matches
- Add checks to block editing if first match of day has started/completed
- Add bulk insert script for Match 1 predictions (CSV format)
- Add single insert script for Match 1 predictions with backup/restore
- Add restore script to revert predictions from backups
- Update Battle Ground visibility logic
- Add backup directory to .gitignore

--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "recalculate-match": "tsx scripts/recalculate-match.ts",
     "test-scoring": "tsx scripts/test-scoring.ts",
     "cleanup-users": "tsx scripts/cleanup-users.ts",
-    "import-players": "tsx scripts/import-players-csv.ts"
+    "import-players": "tsx scripts/import-players-csv.ts",
+    "insert-match1-predictions": "tsx scripts/insert-match1-predictions.ts",
+    "bulk-insert-match1-predictions": "tsx scripts/bulk-insert-match1-predictions.ts",
+    "restore-prediction": "tsx scripts/restore-prediction.ts"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
