Add flexible prediction insertion scripts and update gitignore
- Add insert-prediction.ts: Insert predictions for any match number
- Add bulk-insert-prediction.ts: Bulk insert/update predictions from CSV
- Update package.json with new script commands
- Update .gitignore to exclude:
  - User data CSV files (players-by-team.csv, *-data.csv, *-test.csv)
  - All .md files except README.md
- Remove players-by-team.csv from git tracking (now ignored)

--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,13 @@ next-env.d.ts
 # backup files
 scripts/backups/
 
+# user data files (CSV files with player/prediction data)
+scripts/players-by-team.csv
+scripts/*-data.csv
+scripts/*-test.csv
+
+# markdown files (except README)
+*.md
+!README.md
+!readme.md
+
