Implement 8 PM CST cutoff for predictions grouped by Nepal day
- Changed cutoff from 7 PM to 8 PM CST
- Updated logic to group matches by Nepal day (not UTC day)
- All matches on same Nepal day share same 8 PM CST cutoff
- Cutoff is 8 PM CST on the CST day when Nepal day starts
- Updated MatchCard, predict page, dashboard, and battleground
- Added comprehensive test suite (test-8pm-cutoff.ts) to verify logic
- Removed Match 1 special case (18-hour window) - no longer needed
- Battle Ground shows predictions after cutoff or 6-hour edit cutoff
- All tests passing

--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "insert-prediction": "tsx scripts/insert-prediction.ts",
     "bulk-insert-match1-predictions": "tsx scripts/bulk-insert-match1-predictions.ts",
     "bulk-insert-prediction": "tsx scripts/bulk-insert-prediction.ts",
-    "restore-prediction": "tsx scripts/restore-prediction.ts"
+    "restore-prediction": "tsx scripts/restore-prediction.ts",
+    "test-8pm-cutoff": "tsx scripts/test-8pm-cutoff.ts"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
