--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "bulk-insert-match1-predictions": "tsx scripts/bulk-insert-match1-predictions.ts",
     "bulk-insert-prediction": "tsx scripts/bulk-insert-prediction.ts",
     "restore-prediction": "tsx scripts/restore-prediction.ts",
-    "test-8pm-cutoff": "tsx scripts/test-8pm-cutoff.ts"
+    "test-8pm-cutoff": "tsx scripts/test-8pm-cutoff.ts",
+    "update-playoff-teams": "tsx scripts/update-playoff-teams.ts"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
