feat: Add test mode for notification cron job
- Add NOTIFICATION_TEST_MODE environment variable to toggle test/production mode
- When enabled, sends test notifications to all subscribed users
- When disabled, runs normal cutoff reminder checks
- Fully reversible via environment variable (no code changes needed)
- Add standalone script for sending test notifications
- Add comprehensive documentation for test mode usage

Usage:
  Enable: NOTIFICATION_TEST_MODE=true
  Disable: NOTIFICATION_TEST_MODE=false or remove variable

--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "test-8pm-cutoff": "tsx scripts/test-8pm-cutoff.ts",
     "update-playoff-teams": "tsx scripts/update-playoff-teams.ts",
     "recalculate-all-user-points": "tsx scripts/recalculate-all-user-points.ts",
-    "backup-user-data": "tsx scripts/backup-user-data.ts"
+    "backup-user-data": "tsx scripts/backup-user-data.ts",
+    "send-test-notification-all": "tsx scripts/send-test-to-all-subscribed.ts"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
