--- a/package.json
+++ b/package.json
@@ -29,11 +29,13 @@
     "date-fns": "^4.1.0",
     "dotenv": "^17.2.3",
     "firebase": "^10.13.2",
+    "firebase-admin": "^12.7.0",
     "lucide-react": "^0.454.0",
     "next": "14.2.21",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-hook-form": "^7.53.2"
+    "react-hook-form": "^7.53.2",
+    "server-only": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
