docs: Add comprehensive notification system documentation
- Complete system architecture overview
- Setup and configuration guide
- Platform support details (Android, iOS, Desktop)
- Troubleshooting section
- API reference
- Performance optimizations
- Future enhancement roadmap
- Maintenance guidelines

This documentation serves as the definitive reference for the notification system.

--- a/.gitignore
+++ b/.gitignore
@@ -43,8 +43,9 @@ scripts/players-by-team.csv
 scripts/*-data.csv
 scripts/*-test.csv
 
-# markdown files (except README)
+# markdown files (except README and documentation)
 *.md
 !README.md
 !readme.md
+!NOTIFICATION_SYSTEM_DOCUMENTATION.md
 
