Add scheduled predictions feature
- Add Schedule Prediction button in Dashboard
- Create schedule prediction page with admin panel-style layout
- Implement client-side activation of scheduled predictions in battleground
- Update MatchCard to show scheduled prediction status
- Fix mobile responsiveness issues in prediction and admin pages
- Improve mobile UX with form reordering and auto-scroll
- Add cron job for scheduled prediction activation (backup)
- Update visibility rules to handle scheduled predictions
- Optimize Firestore queries with client-side filtering

--- a/vercel.json
+++ b/vercel.json
@@ -3,6 +3,10 @@
     {
       "path": "/api/cron/send-notifications",
       "schedule": "0 0 * * *"
+    },
+    {
+      "path": "/api/cron/activate-scheduled-predictions",
+      "schedule": "0 9 * * *"
     }
   ]
 }
