Fix TypeScript error in MatchCard and add Firestore index utilities
- Fix scheduledFor timestamp handling in MatchCard
- Add firestore.indexes.json for index deployment
- Add create-firestore-indexes.ts script to check index status
- Add npm script for index checking

--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "update-playoff-teams": "tsx scripts/update-playoff-teams.ts",
     "recalculate-all-user-points": "tsx scripts/recalculate-all-user-points.ts",
     "backup-user-data": "tsx scripts/backup-user-data.ts",
-    "send-test-notification-all": "tsx scripts/send-test-to-all-subscribed.ts"
+    "send-test-notification-all": "tsx scripts/send-test-to-all-subscribed.ts",
+    "create-firestore-indexes": "tsx scripts/create-firestore-indexes.ts"
   },
   "dependencies": {
     "date-fns": "^4.1.0",
