Add debug logging and validation for scoring issues
- Add comprehensive debug logging to scoring function to diagnose scoring issues
- Add validation to require firstInningsBattingTeamId when score/wickets are provided
- Add visual indicator for required field in admin form
- Add find-match-id script to help locate match IDs for recalculation
- Fixes issue where score category and wickets bonuses weren't awarded when firstInningsBattingTeamId was null

--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "seed-test": "tsx scripts/seed-test-data.ts",
     "calculate-test-player-2": "tsx scripts/calculate-test-player-2.ts",
     "recalculate-match": "tsx scripts/recalculate-match.ts",
+    "find-match-id": "tsx scripts/find-match-id.ts",
     "test-scoring": "tsx scripts/test-scoring.ts",
     "cleanup-users": "tsx scripts/cleanup-users.ts",
     "import-players": "tsx scripts/import-players-csv.ts",
